kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-test-release-deployment
spec:
  selector:
    matchLabels:
      app: laravel-test
      version: release
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 1
  template:
    metadata:
      annotations:
        gke-gcsfuse/volumes: "true"
      labels:
        app: laravel-test
        version: release
    spec:
      serviceAccountName: sa-gcs
      restartPolicy: Always

      hostAliases:
      - ip: "127.0.0.1" # gunakan ini jika uji coba 
        hostnames:
        - "app"
      containers:
      - name: laravel-test
        image: laravel:test
        imagePullPolicy: IfNotPresent
        env:  # Wajib dimasukkan juga di init container agar proses migrasi tahu jalan ke MySQL
        - name: APP_NAME
          value: Laravel
        - name: APP_ENV
          value: local
        - name: APP_KEY
          value: base64:4xXg2pArPnIciOKT50zGr7B8cNbmNfXFmZuRPSBmJzU=
        - name: APP_DEBUG
          value: "true"
        - name: DB_CONNECTION
          value: "pgsql"
        - name: DB_HOST
          value: "postgres-service"
        - name: DB_PORT
          value: "5432"
        - name: DB_DATABASE
          value: "laravel_db"
        - name: DB_USERNAME
          value: "root"
        - name: DB_PASSWORD
          value: "rahasia123"
        volumeMounts:
            - name: app-code
              mountPath: /var/www
            - name: gcs-volume
              mountPath: /var/www/storage/app/public
        ports:
          - containerPort: 9000
        
        # resources:
        #   requests:
        #     memory: 768Mi
        #     cpu: 300m
        #   limits:
        #     memory: 2Gi
        #     cpu: 1000m
      
      
      - name: nginx
        image: nginx:test
        imagePullPolicy: IfNotPresent
        volumeMounts:
            - name: app-code
              mountPath: /var/www
            - name: gcs-volume
              mountPath: /var/www/storage/app/public
        ports:
          - containerPort: 80

        # resources:
        #   requests:
        #     memory: 50Mi
        #     cpu: 10m
        #   limits:
        #     memory: 300Mi
        #     cpu: 200m
      

      volumes:
        - name: app-code
          emptyDir: {}
        - name: gcs-volume
          persistentVolumeClaim:
            claimName: laravel-test-pvc
