kubernetes/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: laravel-test-svc
spec:
  type: NodePort
  selector:
    app: laravel-test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
