kubernetes/test-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-test
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-test
  template:
    metadata:
      labels:
        app: postgres-test
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine # Menggunakan versi 15 yang ringan
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: production
spec:
  selector:
    app: postgres-test
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
