kubernetes/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: laravel-gateway
  namespace: production
spec:
  selector:
    istio: ingress # Menggunakan ingress gateway bawaan istio
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Mengizinkan semua domain / akses langsung lewat IP Publik
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: laravel-virtualservice
  namespace: production
spec:
  hosts:
  - "*" # Menangkap trafik dari gateway di atas
  gateways:
  - laravel-gateway
  http:
  - route:
    - destination:
        host: laravel-test-svc.production.svc.cluster.local # Mengarah ke Service internal Laravel Anda
        port:
          number: 80
